# maliput_malidrive

./: .bazelrc  BUILD.bazel  CHANGELOG.rst  CMakeLists.txt  FindRoadPositionsIntersectingLine_analysis.md  MODULE.bazel  README.md  WORKSPACE.bazel  package.xml
experimental/maliput_malidrive_rs/: Cargo.toml
experimental/maliput_malidrive_rs/examples/: load_xodr.rs
experimental/maliput_malidrive_rs/resources/: ArcLane.xodr  SShapeRoad.xodr  SingleLane.xodr
experimental/maliput_malidrive_rs/src/: lib.rs
experimental/maliput_malidrive_rs/src/base/: branch_point.rs  junction.rs  lane.rs  mod.rs  road_geometry.rs  segment.rs
experimental/maliput_malidrive_rs/src/builder/: mod.rs  params.rs  road_curve_factory.rs  road_geometry_builder.rs
experimental/maliput_malidrive_rs/src/common/: error.rs  macros.rs  mod.rs
experimental/maliput_malidrive_rs/src/road_curve/: arc_ground_curve.rs  cubic_polynomial.rs  function.rs  ground_curve.rs  lane_offset.rs  line_ground_curve.rs  mod.rs  param_poly3_ground_curve.rs  piecewise_ground_curve.rs  road_curve.rs  (+2 more)
experimental/maliput_malidrive_rs/tests/: road_geometry_builder_tests.rs  xodr_integration_tests.rs
maliput_malidrive/src/applications/: CMakeLists.txt  maliput_malidrive_measure_load_time.cc  xodr_extract.cc  xodr_query.cc  xodr_validate.cc
maliput_malidrive/src/plugin/: CMakeLists.txt  malidrive_road_network.cc  road_network.cc
resources/: ArcLaneRolled.xodr  ArcLaneRolledAndOffset.xodr  BUILD.bazel  GapInLaneWidthDrivableLane.xodr  Highway.xodr  LongRoad.xodr  MultiLevelArcRoad.xodr  MultipleLanesRoadDifferentMarkings.xodr  ParametricCubicCurveComplexRoad.xodr  ParametricCubicCurveRoad.xodr  Road2_20.xodr  RoadWithAllDeviceTypes.xodr  RoadWithRoadMarkings.xodr  RoadWithStopLine.xodr  ShortStraightLanes.xodr  SingleRoadBidirectionalLanes.xodr  SingleRoadElevatedAllDeviceTypes.xodr  SingleRoadOrientationAttributes.xodr  SingleRoadSDirectionChange.xodr  SingleRoadWithSpeedLimit.xodr  SmallTownRoads.xodr  Straight800m.xodr  StraightRoadMultipleLaneDirections.xodr  StraightRoadWithMultipleRoadObjects.xodr  TShapeRoadWithJunctionUserData.xodr  TestInnerLaneHighCurvature.xodr  TwoRoadsWithRoadObjects.xodr  TwoRoadsWithTrafficLights.xodr  TwoRoadsWithTrafficSigns.xodr  TwoRoadsWithTrafficSigns_viz.yaml  TwoWayRoadWithDoubleYellowCurve.xodr  XCrossStopAllWay.xodr
resources/figure8_trafficlights/: figure8_viz.yaml
resources/traffic_control_device_db/: all_device_types_test_db.yaml  road_marking_test_db.yaml  road_object_test_db.yaml  testing_database.yaml  traffic_control_device_db_example.yaml
resources/traffic_signal_db/: README.md  traffic_signal_db_example.yaml
src/: CMakeLists.txt
src/applications/: CMakeLists.txt  xodr_extract.cc  xodr_query.cc  xodr_to_obj.cc  xodr_validate.cc
src/maliput_malidrive/: CMakeLists.txt
src/maliput_malidrive/base/: CMakeLists.txt  lane.cc  lane.h  lane_boundary.cc  lane_boundary.h  road_geometry.cc  road_geometry.h  segment.h
src/maliput_malidrive/builder/: CMakeLists.txt  builder_tools.cc  builder_tools.h  direction_usage_builder.cc  direction_usage_builder.h  discrete_value_rule_state_provider_builder.cc  discrete_value_rule_state_provider_builder.h  params.cc  phase_provider_builder.h  range_value_rule_state_provider_builder.cc  range_value_rule_state_provider_builder.h  road_curve_factory.cc  road_curve_factory.h  road_geometry_builder.cc  road_geometry_builder.h  road_geometry_configuration.cc  road_geometry_configuration.h  road_marking_builder.cc  road_marking_builder.h  road_marking_type_mapper.cc  road_marking_type_mapper.h  road_network_builder.cc  road_network_configuration.cc  road_network_configuration.h  road_object_book_builder.cc  road_object_book_builder.h  road_object_builder.cc  road_object_builder.h  road_object_type_mapper.cc  road_object_type_mapper.h  road_rulebook_builder.cc  road_rulebook_builder.h  road_rulebook_builder_old_rules.cc  road_rulebook_builder_old_rules.h  rule_registry_builder.cc  rule_registry_builder.h  speed_limit_builder.cc  traffic_control_device_books_builder.cc  traffic_control_device_books_builder.h  traffic_light_book_builder.cc  (+10 more)
src/maliput_malidrive/road_curve/: CMakeLists.txt  arc_ground_curve.cc  arc_ground_curve.h  cubic_polynomial.h  function.h  ground_curve.h  lane_offset.cc  lane_offset.h  line_ground_curve.h  odr_spiral.cc  odr_spiral.h  param_poly3_ground_curve.cc  param_poly3_ground_curve.h  piecewise_function.cc  piecewise_function.h  piecewise_ground_curve.cc  piecewise_ground_curve.h  road_curve.cc  road_curve.h  road_curve_integrators.md  road_curve_offset.cc  road_curve_offset.h  scaled_domain_function.h  spiral_ground_curve.cc  spiral_ground_curve.h
src/maliput_malidrive/test_utilities/: road_geometry_configuration_for_xodrs.cc
src/maliput_malidrive/traffic_control_device/: CMakeLists.txt  README.md  device_type.cc  device_type.h  parser.cc  parser.h  traffic_control_device_database_loader.cc  traffic_control_device_database_loader.h  yaml_helper.cc  yaml_helper.h
src/maliput_malidrive/traffic_signal/: CMakeLists.txt  README.md  parser.cc  parser.h  traffic_signal_database_loader.cc  traffic_signal_database_loader.h  traffic_signal_loader.cc  traffic_signal_loader.h  yaml_helper.cc  yaml_helper.h
src/maliput_malidrive/xodr/: CMakeLists.txt  README.md  colors.cc  colors.h  common.cc  common.h  db_manager.cc  db_manager.h  geo_reference.cc  geo_reference.h  geometry.cc  geometry.h  header.cc  header.h  junction.cc  junction.h  lane.cc  lane.h  lane_road_mark.cc  lane_road_mark.h  offset.cc  offset.h  parser.cc  parser.h  parser_configuration.h  road_header.cc  road_header.h  signal.cc  signal.h  signals.cc  signals.h  validity.cc  validity.h
src/plugin/: CMakeLists.txt  road_network.cc
test/integration/: BUILD.bazel  extensive_queries_test.cc
test/regression/base/: BUILD.bazel  CMakeLists.txt  lane_boundary_test.cc  lane_test.cc  road_geometry_test.cc  segment_test.cc
test/regression/plugin/: BUILD.bazel  road_network_plugin_test.cc
test/regression/utility/: BUILD.bazel  resources_test.cc
(+297 files in other folders)
