###############################################################################
# Loaders
###############################################################################

load("//:bazel/variables.bzl", "COPTS")

###############################################################################
# Libraries
###############################################################################

cc_library(
    name = "utility",
    srcs = glob(["src/utility/**/*.cc"]),
    hdrs = glob(["src/utility/**/*.h"]),
    copts = COPTS,
    strip_include_prefix = "src",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "maliput_malidrive_public_headers",
    hdrs = glob(["include/maliput_malidrive/**/*.h"]),
    copts = COPTS,
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "@maliput//:api",
        "@maliput//:base",
        "@maliput//:common",
        "@maliput//:plugin",
        "@maliput//:geometry_base",
    ],
)

# TODO(stonier): decompose this across dirs in src/maliput_malidrive
cc_library(
    name = "maliput_malidrive",
    srcs = glob(["src/maliput_malidrive/**/*.cc"]),
    hdrs = glob(["src/maliput_malidrive/**/*.h"]),
    copts = COPTS,
    strip_include_prefix = "src",
    visibility = ["//visibility:public"],
    deps = [
        ":maliput_malidrive_public_headers",
        ":utility",
        "@maliput//:api",
        "@maliput//:base",
        "@maliput//:geometry_base",
        "@maliput//:utility",
        "@maliput//:drake",
        "@tinyxml2//:tinyxml2"
    ],
)

cc_library(
    name = "plugin",
    srcs = glob(["src/plugin/**/*.cc"]),
    copts = COPTS,
    visibility = ["//visibility:public"],
    deps = [
        ":maliput_malidrive",
        "@maliput//:api",
        "@maliput//:base",
        "@maliput//:common",
    ],
)

###############################################################################
# Binaries
###############################################################################

cc_library(
    name = "log_level_flag",
    hdrs = glob(["src/applications/log_level_flag.h"]),
    copts = COPTS,
    strip_include_prefix = "src",
    visibility = ["//visibility:private"],
    deps = [
        "@gflags//:gflags",
    ],
)

cc_binary(
    name = "xodr_extract",
    srcs = ["src/applications/xodr_extract.cc"],
    copts = COPTS,
    visibility = ["//visibility:public"],
    deps = [
        ":log_level_flag",
        ":maliput_malidrive",
        "@gflags//:gflags",
        "@maliput//:common",
        "@tinyxml2//:tinyxml2"
    ],
)


cc_binary(
    name = "xodr_query",
    srcs = ["src/applications/xodr_query.cc"],
    copts = COPTS,
    visibility = ["//visibility:public"],
    deps = [
        ":log_level_flag",
        ":maliput_malidrive",
        "@gflags//:gflags",
        "@maliput//:common",
    ],
)

cc_binary(
    name = "xodr_validate",
    srcs = ["src/applications/xodr_validate.cc"],
    copts = COPTS,
    visibility = ["//visibility:public"],
    deps = [
        ":log_level_flag",
        ":maliput_malidrive",
        "@gflags//:gflags",
        "@maliput//:common",
    ],
)
