###############################################################################
# Loaders
###############################################################################

load("//:bazel/variables.bzl", "COPTS")

###############################################################################
# Libraries
###############################################################################

cc_library(
    name = "utility",
    srcs = glob(["src/utility/**/*.cc"]),
    hdrs = glob(["src/utility/**/*.h"]),
    copts = COPTS,
    strip_include_prefix = "src",
    visibility = ["//visibility:public"],
)

# TODO(stonier): decompose this across dirs in src/maliput_malidrive
cc_library(
    name = "maliput_malidrive",
    visibility = ["//visibility:public"],
    deps = [
        ":constants",
        ":base",
        ":builder",
        ":common",
        ":loader",
        ":road_curve",
        ":test_utilities",
    ],
)

cc_library(
    name = "constants",
    hdrs = ["include/maliput_malidrive/constants.h"],
    copts = COPTS,
    strip_include_prefix = "include",
    visibility = ["//visibility:private"],
)

cc_library(
    name = "base",
    srcs = glob(["src/maliput_malidrive/base/*.cc"]),
    hdrs = glob(["src/maliput_malidrive/base/*.h"]),
    copts = COPTS,
    strip_include_prefix = "src",
    visibility = ["//visibility:public"],
    deps = [
        ":constants",
        ":common",
        ":road_curve",
        ":xodr",
        "@maliput//:api",
        "@maliput//:base",
        "@maliput//:drake",
        "@maliput//:geometry_base",
        "@maliput//:math",
    ],
)

cc_library(
    name = "private_builder_headers",
    hdrs = glob(["src/maliput_malidrive/builder/*.h"]),
    copts = COPTS,
    strip_include_prefix = "src",
    visibility = ["//visibility:private"],
)

cc_library(
    name = "builder",
    srcs = glob(["src/maliput_malidrive/builder/*.cc"]),
    hdrs = glob(["include/maliput_malidrive/builder/*.h"]),
    copts = COPTS,
    linkopts = ["-lpthread"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        ":private_builder_headers",
        ":base",
        ":common",
        ":road_curve",
        ":xodr",
        "@maliput//:api",
        "@maliput//:base",
        "@maliput//:drake",
        "@maliput//:geometry_base",
        "@maliput//:math",
        "@maliput//:utility",
    ],
)

cc_library(
    name = "common",
    srcs = glob(["src/maliput_malidrive/common/*.cc"]),
    hdrs = glob(["include/maliput_malidrive/common/*.h"]),
    copts = COPTS,
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "@maliput//:common",
    ],
)

cc_library(
    name = "private_loader_headers",
    hdrs = glob(["src/maliput_malidrive/loader/*.h"]),
    copts = COPTS,
    strip_include_prefix = "src",
    visibility = ["//visibility:private"],
)

cc_library(
    name = "loader",
    srcs = glob(["src/maliput_malidrive/loader/*.cc"]),
    hdrs = glob(["include/maliput_malidrive/loader/*.h"]),
    copts = COPTS,
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        ":private_loader_headers",
        ":builder",
        ":common",
        "@maliput//:api",
        "@maliput//:base",
        "@maliput//:geometry_base",
        "@maliput//:math",
    ],
)

cc_library(
    name = "road_curve",
    srcs = glob(["src/maliput_malidrive/road_curve/*.cc"]),
    hdrs = glob(["src/maliput_malidrive/road_curve/*.h"]),
    strip_include_prefix = "src",
    copts = COPTS,
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        "@eigen",
        "@maliput//:base",
        "@maliput//:common",
        "@maliput//:drake",
        "@maliput//:math",
    ],
)

cc_library(
    name = "xodr",
    srcs = glob(["src/maliput_malidrive/xodr/*.cc"]),
    hdrs = glob(["src/maliput_malidrive/xodr/*.h"]),
    strip_include_prefix = "src",
    copts = COPTS,
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        "@maliput//:api",
        "@maliput//:math",
        "@tinyxml2//:tinyxml2"
    ],
)


cc_library(
    name = "test_utilities",
    srcs = glob(["src/maliput_malidrive/test_utilities/*.cc"]),
    hdrs = glob(["src/maliput_malidrive/test_utilities/*.h"]),
    strip_include_prefix = "src",
    copts = COPTS,
    visibility = ["//visibility:private"],
    deps = [
        ":builder",
        ":common",
        "@maliput//:api",
        "@maliput//:math",
    ],
)

cc_library(
    name = "plugin",
    srcs = glob(["src/plugin/**/*.cc"]),
    copts = COPTS,
    visibility = ["//visibility:public"],
    deps = [
        ":builder",
        "@maliput//:plugin",
    ],
)

###############################################################################
# Binaries
###############################################################################

cc_library(
    name = "log_level_flag",
    hdrs = glob(["src/applications/log_level_flag.h"]),
    copts = COPTS,
    strip_include_prefix = "src",
    visibility = ["//visibility:private"],
    deps = [
        "@gflags//:gflags",
    ],
)

cc_binary(
    name = "xodr_extract",
    srcs = ["src/applications/xodr_extract.cc"],
    copts = COPTS,
    visibility = ["//visibility:public"],
    deps = [
        ":log_level_flag",
        ":common",
        ":xodr",
        "@gflags//:gflags",
        "@maliput//:common",
        "@tinyxml2//:tinyxml2"
    ],
)


cc_binary(
    name = "xodr_query",
    srcs = ["src/applications/xodr_query.cc"],
    copts = COPTS,
    visibility = ["//visibility:public"],
    deps = [
        ":log_level_flag",
        ":utility",
        ":xodr",
        "@gflags//:gflags",
        "@maliput//:common",
    ],
)

cc_binary(
    name = "xodr_to_obj",
    srcs = ["src/applications/xodr_to_obj.cc"],
    copts = COPTS,
    visibility = ["//visibility:public"],
    deps = [
        ":log_level_flag",
        ":builder",
        ":common",
        ":loader",
        ":xodr",
        "@gflags//:gflags",
        "@maliput//:common",
        "@maliput//:utility",
        "@tinyxml2//:tinyxml2"
    ],
)

cc_binary(
    name = "xodr_validate",
    srcs = ["src/applications/xodr_validate.cc"],
    copts = COPTS,
    visibility = ["//visibility:public"],
    deps = [
        ":log_level_flag",
        ":utility",
        ":xodr",
        "@gflags//:gflags",
        "@maliput//:common",
    ],
)
