<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maliput_malidrive</name>
  <version>0.17.1</version>
  <description>maliput_malidrive backend</description>
  <license file="LICENSE">BSD Clause 3</license>
  <maintainer email="andrew.best@tri.global">Andrew Best</maintainer>
  <maintainer email="franco.c@ekumenlabs.com">Franco Cipollone</maintainer>
  <maintainer email="santiago.lopez@ekumenlabs.com">Santiago Lopez</maintainer>
  <maintainer email="juancarosella96@ekumenlabs.com">Juan Manuel Carosella</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <doc_depend>ament_cmake_doxygen</doc_depend>

  <depend>libgflags-dev</depend>
  <depend>maliput</depend>
  <depend>tinyxml2</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
