###############################################################################
# TODO(stonier):
#   Reenable once a solution to #585 [1] is found. See also comments in
#   generate_unit_tests.
#
#   [1] https://github.com/maliput/maliput/issues/585
###############################################################################

###############################################################################
# Loaders
###############################################################################

# load("//:bazel/variables.bzl", "COPTS")
# load("//:bazel/testing.bzl", "generate_unit_tests")

###############################################################################
# Test
###############################################################################

# generate_unit_tests(
#    sources = glob(["*.cc"]),
# )
