###############################################################################
# Loaders
###############################################################################

load("//:bazel/variables.bzl", "COPTS")
load("//:bazel/testing.bzl", "generate_unit_tests")

###############################################################################
# Test
###############################################################################

generate_unit_tests(
   sources = glob(["*.cc"]),
)
