###############################################################################
# Loaders
###############################################################################

load("//:bazel/variables.bzl", "COPTS")
load("//:bazel/testing.bzl", "generate_unit_tests")

###############################################################################
# Test
###############################################################################

# TODO(francocipollone): The test uses a compile definition (DEF_MALIDRIVE_RESOURCES)
#                        that is not being passed in the bazel world.
# generate_unit_tests(
#    sources = glob(["*.cc"])
# )
