###############################################################################
# Loaders
###############################################################################

load("//:bazel/variables.bzl", "COPTS")

###############################################################################
# Test
###############################################################################

cc_test(
    name="resources_test",
    srcs = ["resources_test.cc"],
    size = "small",
    copts = COPTS,
    defines = [
        "DEF_PROJECT_SOURCE_DIR=\\\".\\\""
    ],
    data = [
        "//resources:all",
    ],
    deps = [
        "//:utility",
        "@googletest//:gtest",
    ],
)
